fix: fix z-index

--- a/eco-sounds/style.css
+++ b/eco-sounds/style.css
@@ -86,6 +86,7 @@ body {
     background-size: contain;
     background-position: center;
     border-top-right-radius: 25px;
+    z-index: 1;
 }
 
 .btn-play {
@@ -105,6 +106,7 @@ body {
 
 .btn-play:hover {
     filter: brightness(.85);
+    z-index: 10;
 }
 
 .btn-play--pause {
